Added Version 2.0 2.0: A complete rebuild of the project using a template to help focus the design portion. Please look at the README.md for details. New Files: index1.html and mystyle.csss

--- a/index.html
+++ b/index.html
@@ -10,34 +10,19 @@
 </head>
 
 <body>
-    <!-- Version 1 Tasklist:
-    1. Add Google Logo and center it
-    2. Add Search form with 2 buttons below (Gogole Search and I'm Feeling Lucky)
-    3. Small paragraph underneath buttons "Google offered in: Francais"
-    4. Add Footer with 2 boxes:
-        i. First Box has "Canada"
-        ii. Second has "Advertising Business How Search works        Privacy Terms Settings
-    5. Add Nav Bar at the top that includes: "About Store" on Right and "Gmail Images" on left
-    6. Note that all links will be dead (clicking on them won't lead anywhere). -->
     <div id="Top page">
         <ul>
-<<<<<<< HEAD
             <div id="left-nav">
-=======
-            <div id="left-bar">
->>>>>>> 1f961d491b8258bf71a4af69c66cd35cf61697fe
                 <!--Left side-->
                 <li><a href="#">About</a></li>
                 <li><a href="#">Store</a></li>
             </div>
             <!--Right side-->
-<<<<<<< HEAD
             <div id="right-nav">
-=======
-            <div id="right-bar">
->>>>>>> 1f961d491b8258bf71a4af69c66cd35cf61697fe
-                <li><a href="#">Gmail</a></li>
-                <li><a href="#">Images</a></li>
+                <div id="gmail-images">
+                    <li><a href="#">Gmail</a></li>
+                    <li><a href="#">Images</a></li>
+                </div>
                 <li><a href="#" id="g-apps" title="Google apps"></a></li>
                 <li><button id="google-profile" type="button">Sign in</button></li>
             </div>
@@ -47,11 +32,7 @@
     <div id="center-page">
         <img src="/home/tristan/the_odin_project/google-homepage/images/google-logo.png" 
                 alt="google's standard logo">
-<<<<<<< HEAD
-        <form id="searchform">
-=======
         <form>
->>>>>>> 1f961d491b8258bf71a4af69c66cd35cf61697fe
         <input id="gsearch" name="gsearch" type="search">
         <div id="container-btns"></div>
             <input id="google btn" class="main-button" type="submit" value="Google Search">
@@ -63,26 +44,15 @@
     <div id="fbar">
         <footer id="footer">
             <ul>
-<<<<<<< HEAD
                 <div id="left-foot">
-=======
-                <div id="left-bar">
->>>>>>> 1f961d491b8258bf71a4af69c66cd35cf61697fe
                     <li><a href="#">Advertising</a></li>
                     <li><a href="#">Business</a></li>
                     <li><a href="#">How Search works</a></li>
                 </div>
-<<<<<<< HEAD
                 <div id="right-foot">
                     <li><a href="#">Privacy</a></li>
                     <li><a href="#">Terms</a></li>
                     <li style="padding-right: 27px;"><a href="#">Settings</a></li>
-=======
-                <div id="right-bar">
-                    <li><a href="#">Privacy</a></li>
-                    <li><a href="#">Terms</a></li>
-                    <li><a href="#">Settings</a></li>
->>>>>>> 1f961d491b8258bf71a4af69c66cd35cf61697fe
                 </div>
             </ul>
         </footer>
