--- a/index1.html
+++ b/index1.html
@@ -27,22 +27,21 @@
   <img src="images/google-logo.png" alt="Google's standard logo">
   <div>
       <form>
-          <div style="display: block; margin: auto;">
-            <span class="search-box">
-                <svg id="search-icon" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 
-                    3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 
-                    19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 
-                    14z"/><path d="M0 0h24v24H0z" fill="none"></path>
-                </svg>
-            </span>
-            <input class="searchbar" type="search"><br>
-            
+          <div class="search-box">
+                <span class="icon-box">
+                    <svg id="search-icon" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 
+                        3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 
+                        19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 
+                        14z"/><path d="M0 0h24v24H0z" fill="none"></path>
+                    </svg>
+                </span>
+                <input class="searchbar" type="search" title="Search"><br>
           </div>
-        <div class="containerbtns">
-            <input id="google btn" class="main-button" type="submit" value="Google Search">
-            <input id="feeling lucky" class="main-button" type="submit" value="I'm Feeling Lucky">
-        </div>
+            <div class="containerbtns">
+                <input id="google btn" class="main-button" type="submit" value="Google Search">
+                <input id="feeling lucky" class="main-button" type="submit" value="I'm Feeling Lucky">
+            </div>
       </form>
   </div>
 </div>
